Update direct certificate - Copy (2).html

--- a/direct certificate - Copy (2).html
+++ b/direct certificate - Copy (2).html
@@ -433,12 +433,12 @@
                                     <input type="text" class="form-control" required  name="data[Center]"  placeholder="Test center">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control" required  placeholder="Target Country">
+                                    <input type="text" class="form-control" required name="data[Target]"   placeholder="Target Country">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control" required  name="data[Disability]"   placeholder="disability (yes/no)">
+                                    <input type="text" class="form-control" required   placeholder="disability (yes/no)">
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <input type="text" class="form-control" required  placeholder="Present Score">
