--- a/direct certificate.html
+++ b/direct certificate.html
@@ -379,7 +379,7 @@
             <div class="form-holder">
                 <div class="form-content">
                     <div class="form-items">
-                        <form action=" https://sheetdb.io/api/v1/ej4ndttkau5jl" method="post" id="sheetdb-form">
+                        <form action="https://sheetdb.io/api/v1/gek1cmm39d737" method="post" id="sheetdb-form">
                             <div class="row">
                                 <div class="col-12 col-sm-6">
                                     <input type="text" class="form-control" name="data[Name]" required placeholder="First name">
