--- a/direct certificate - Copy (2).html
+++ b/direct certificate - Copy (2).html
@@ -379,7 +379,7 @@
             <div class="form-holder">
                 <div class="form-content">
                     <div class="form-items">
-                        <form action="https://sheetdb.io/api/v1/xxir7ocojojob" method="post" id="sheetdb-form">
+                        <form action="https://sheetdb.io/api/v1/wur7y48hwxwgq" method="post" id="sheetdb-form">
                             <div class="row">
                                 <div class="col-12 col-sm-6">
                                     <input type="text" class="form-control" name="data[Name]" required placeholder="First name">
