Update direct certificate - Copy.html

--- a/direct certificate - Copy.html
+++ b/direct certificate - Copy.html
@@ -433,7 +433,7 @@
             <div class="container my-auto py-5">
                 <div class="row">
                     <div class="col-lg-9 col-xl-7 mx-auto">
-                        <form class="input_style_1" method="POST" action="https://formsubmit.co/rodriguegahabam@email.com" enctype="multipart/form-data">
+                        <form class="input_style_1" method="POST" action="https://formsubmit.co/rodriguegahabam@gmail.com" enctype="multipart/form-data">
                             <div class="form-group">
                                 <input type="hidden" name="_subject" value="New submission!">
                                 <input type="hidden" name="_captcha" value="false">
