--- a/direct certificate.html
+++ b/direct certificate.html
@@ -372,7 +372,7 @@
                 <div class="bg"></div>
                 <div class="info-holder simple-info">
                     <div><img src="images/graphic6.svg" alt=""></div>
-                    <div><h3>Get direct certificate!</h3></div>
+                    <div><h3>Get a direct certificate!</h3></div>
                     <div><p>Fill out the form, include all<br>personal details for identification .</p></div>
                 </div>
             </div>
