--- a/for-test-takers/book-a-test.html
+++ b/for-test-takers/book-a-test.html
@@ -433,11 +433,11 @@
         <div class="container">
     <section class="find-test-location">
         <h1>Book a test</h1>
-        <a HREF="https://britishcouncil.systeme.io/021b263c"><button>
+        <a HREF="https://takeielts.britishcouncil.org/take-ielts/book"><button>
             REGISTER FOR IELTS TEST WITH BRITISH COUNCIL
         </button></a>
         <a HREF="book-a-test copy.html"><button style="margin-top: 20px;">
-          GET DIRECT CERTIFICATE WITHOUT SITTING FOR EXAMS
+          GET A DIRECT CERTIFICATE WITHOUT SITTING FOR EXAMS
         </button></a>
 
     <footer style="margin-top: 20px;" class="container-fluid footer">
