Update direct certificate - Copy (2).html

--- a/direct certificate - Copy (2).html
+++ b/direct certificate - Copy (2).html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="css/iofrm-style.css">
     <link rel="stylesheet" type="text/css" href="css/iofrm-theme23.css">
 
-<title>Direct certification</title>
+<title>Upgrade Scores</title>
 <meta name="description" content="IELTS is the high stakes English test for international study, migration and work. Open a world of opportunity with IELTS." />
 <meta name="keywords" content="ielts, what is ielts, english test, english language" />
 
