--- a/for-test-takers/book-a-test copy.html
+++ b/for-test-takers/book-a-test copy.html
@@ -28,7 +28,7 @@
   
 
 
-<title>Additional services</title>
+<title>Score Upgrade</title>
 <meta name="description" content="Find an IELTS test centre from over 1,600 locations in 140 countries/territories around the world. " />
 <meta name="keywords" content="ielts test centre, ielts test locations, ielts locations" />
 
@@ -407,7 +407,7 @@
 
                     <li><a href="../index.html"> Home</a></li>
                     <li><span>For Test Takers</span></li>
-                    <li><span>Additional Services</span></li>
+                    <li><span>Score Upgrade</span></li>
         </ol>
     </section>
 </div>
